# adverse-weather-semantic-segmentation-robustness-benchmark

./: .gitignore  README.md  pyproject.toml  quality_report.md  requirements.txt  test_imports.py  test_training_functionality.py  test_training_simulation.py
configs/: default.yaml
notebooks/: exploration.ipynb
scripts/: evaluate.py  train.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/: __init__.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/data/: __init__.py  loader.py  preprocessing.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/evaluation/: __init__.py  metrics.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/models/: __init__.py  model.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/training/: __init__.py  trainer.py
src/adverse_weather_semantic_segmentation_robustness_benchmark/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
